# Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp  notes.md  settings.txt
assets/: effects.txt  heros.txt  monsters.txt
content/: CMakeLists.txt
content/actions/: CMakeLists.txt  attack.cpp  attack.h  close_door.cpp  close_door.h  distance_attack.cpp  distance_attack.h  move.cpp  move.h  open_door.cpp  open_door.h  rest.cpp  rest.h  wander.cpp  wander.h
content/actors/: CMakeLists.txt  heros.h  monsters.cpp  monsters.h
content/events/: CMakeLists.txt  die.cpp  die.h  hit.cpp  hit.h  magic.cpp  magic.h  swing.cpp  swing.h  take_weapon.cpp  take_weapon.h  thrust.cpp  thrust.h  updatefov.cpp
content/weapons/: CMakeLists.txt  cleaver.cpp  cleaver.h  none.cpp  none.h  staff_green.cpp  staff_green.h  staff_red.cpp  staff_red.h  sword.cpp  sword.h  witchcraft.cpp  witchcraft.h
engine/: CMakeLists.txt  action.cpp  action.h  actor.cpp  actor.h  actors.cpp  actors.h  camera.cpp  camera.h  engine.cpp  engine.h  event.cpp  event.h  events.cpp  events.h  hero.cpp  hero.h  herotype.cpp  herotype.h  monster.cpp  monster.h  monstertype.cpp  monstertype.h  settings.cpp  settings.h  weapon.cpp  weapon.h
engine/graphics/: CMakeLists.txt  animatedsprite.cpp  animatedsprite.h  graphics.cpp  graphics.h
engine/input/: CMakeLists.txt  input.cpp  input.h
engine/map/: CMakeLists.txt  decorator.cpp  decorator.h  door.cpp  door.h  dungeon.cpp  dungeon.h  tile.cpp  tile.h
engine/util/: CMakeLists.txt  Makefile
